WORK #56: Fix-up post-credits alignments

--- a/catch-base-pro/style.css
+++ b/catch-base-pro/style.css
@@ -1575,7 +1575,6 @@ textarea {
 
 article.post header.post-credits {
     margin-bottom: 1em;
-    text-align: right;
     overflow: auto;
 }
 
